crates/keron-lang/tests/corpus/errors/parse/reconcile_chain_trailing_arrow.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: unexpected end of input, expected expression
  --> 3:1
  |
3 | 
  | ^
  = help: an expression is required here — write a value, name, or call.
